2005-09-14  Irene Huang <Irene.Huang@sun.com>

	Fix for #316274

	* exchange-account-setup.c: (btn_chpass_clicked),
	(org_gnome_exchange_settings): Enable change password function only 
	when built with kerberos5.  

2005-08-29  Praveen Kumar  <kpraveen@novell.com>

	** Fixes bug 314762
	
	* exchange-config-listener.c (remove_selected_non_offline_esources) :
	Fixing a nasty infinite loop by swapping an if and while block.
	
2005-08-26  Shakti Sen <shprasad@novell.com>

	* exchange-folder.c (org_gnome_exchange_folder_unsubscribe): Fixes the
	'Label disappears' problem in Tasks, Calendar and Contacts.

	Fixes bug #311959.

2005-08-25  Arunprakash  <arunp@novell.com>

	* exchange-config-listener.c (account_added) : Need to set the
	account's linestatus to online as there is no way to get the
	linestatus in plugin. Also moved the authentication code to
	exchange_operations_get_exchange_account as it is not needed here.
	* exchange-operations.c (exchange_operations_get_exchange_account) :
	Updated to return the account in offline mode.

2005-08-25  Shakti Sen  <shprasad@novell.com>

	* exchange-folder.c (exchange_refresh_folder_tree, exchange_get_folder,
	org_gnome_exchange_folder_inbox_unsubscribe): Added support for
	Unsubscribe to other user's Inbox.

	Fixes bug #313310.

2005-08-24  Shakti Sen <shprasad@novell.com>

	* exchange-permissions-dialog.c (add_clicked): Getting list of mail-ids
	instead of a single mail-id.
	* exchange-user-dialog.[c/h] (e2k_user_dialog_get_user_list): Added
	support for adding multiple IDs.

	Fixes bug #313919.

2005-08-24  Praveen Kumar  <kpraveen@novell.com>

	* plugins/exchange-operations/exchange-account-setup.c:
	* plugins/exchange-operations/exchange-calendar.c:
	* plugins/exchange-operations/exchange-config-listener.c:
	* plugins/exchange-operations/exchange-contacts.c:
	* plugins/exchange-operations/exchange-delegates-user.c:
	* plugins/exchange-operations/exchange-folder-size-display.c: